--- a/style.css
+++ b/style.css
@@ -8,12 +8,12 @@ body {
 }
 nav ul,
 nav ul li {
-    margin: 0;
-   padding: 0;
+  margin: 0;
+  padding: 0;
 }
  nav ul {
-    list-style-type: none;
-    margin-bottom: 20px;
+  list-style-type: none;
+  margin-bottom: 20px;
 }
 nav ul li a {
     text-decoration: none;
@@ -22,11 +22,11 @@ nav ul li a {
 nav ul li a:hover {
     text-decoration: underline;
 }
-
+/**       
 #menu-table {
-    display: table;
-    background: #dd0bc4;
-    width: 100%;
+  display: table;
+  background: #dd0bc4;
+  width: 100%;
 }
 #menu-table li {
    display: table-cell;
@@ -37,3 +37,4 @@ nav ul li a:hover {
 #menu-table li:hover {
    background: #800571;
  }
+ **/
